Amend the mobile menu - remove nowrap, make the bg image smaller on area pages, fix mobile heading on area pages

--- a/themes/rubbish_taxi/css/custom.css
+++ b/themes/rubbish_taxi/css/custom.css
@@ -855,7 +855,7 @@ blockquote.style1 div em{
 
 .service-single-area-cus_jumbotron,
 .service-area-cus_jumbotron{
-	background:url(../images/dist/area_we_services-top-bg-small.jpg) no-repeat;
+	background:url(../images/dist/area_we_services-top-bg-small_2.jpg) no-repeat;
 	background-position:top center;
 	width:100%;
 	/*padding-top:206px;*/
@@ -865,7 +865,7 @@ blockquote.style1 div em{
 
 
 .service-single-area-cus_jumbotron {
-    height:707px;
+    height:567px;
 }
 
 
