--- a/themes/rubbish_taxi/css/responsive.css
+++ b/themes/rubbish_taxi/css/responsive.css
@@ -56,6 +56,11 @@
     .header_social {
         display: block;
     }
+
+    .service-single-area-cus_jumbotron .jumbotron-content h1 {
+        position: relative;
+        top: 270px;
+    }
 }
 
     @media screen and (min-width: 768px) and (max-width: 1000px)
@@ -218,7 +223,7 @@ a.logo span{display:none;}
 	/*------debashis---------*/
 	
 	.cus_jumbotron.adj { height:593px; background: url("../images/dist/taxi_bg.jpg") no-repeat  center bottom !important;   }
-	a.logo span{display:block; font-size:27px; color:#010101; line-height:27px; text-align:center; position:absolute; left:0%; top:188px; z-index:99999; display:block; width:100%; height:40px;   font-family: vtks_untitledregular,sans-serif; }
+	a.logo span{display:block; font-size:27px; color:#010101; line-height:32px; text-align:center; position:absolute; left:0%; top:188px; z-index:99999; display:block; width:100%; height:40px;   font-family: vtks_untitledregular,sans-serif; }
 	.title-header1{ font-size:2em; }
 	.placeholder p span.st{ font-weight:bold; }
 	.navx{ position:relative; top:-86px; }
@@ -326,7 +331,15 @@ a.logo span{display:none;}
 	.placeholder.right img{ margin: 0 auto; float:none; }
 	
 	.navbar-collapse{ background: #f2f2f2;  overflow-y: inherit;}
-	.navbar-collapse ul li a{ font-size: 25px !important; padding-left: 30px !important;}
+	.navbar-collapse ul li a{
+        font-size: 25px !important;
+        padding-left: 30px !important;
+    }
+
+    .dropdown-menu>li>a {
+        white-space: normal !important;
+    }
+
 	.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus { background-color:inherit;}
 
 	
